* exo-desktop-item-edit/main.c, exo-open/main.c, exo-mount/main.c 	  exo-csource/main.c, exo-mount-notify/main.c: Use -V for --version. 	* Manually update po files and regenerate them.
(Old svn revision: 28885)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-22	Nick Schermer <nick@xfce.org>
+
+	* exo-desktop-item-edit/main.c, exo-open/main.c, exo-mount/main.c
+	  exo-csource/main.c, exo-mount-notify/main.c: Use -V for --version.
+	* Manually update po files and regenerate them. 
+
 2008-11-20	Jannis Pohlmann <jannis@xfce.org>
 
 	* exo/exo-url.c (_exo_url_to_local_path, exo_url_show_on_screen): 
