--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-14 22:59+0100\n"
+"POT-Creation-Date: 2008-11-22 12:34+0100\n"
 "PO-Revision-Date:  2008-10-18 16:18+0200\n"
 "Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
@@ -433,12 +433,12 @@ msgstr "Werkzeugleiste anpassen..."
 msgid "Unable to open \"%s\""
 msgstr "Konnte »%s« nicht öffnen"
 
-#: ../exo/exo-url.c:331
+#: ../exo/exo-url.c:326
 #, c-format
 msgid "The URL \"%s\" is not supported"
 msgstr "Die URL »%s« wird nicht unterstützt"
 
-#: ../exo/exo-url.c:417
+#: ../exo/exo-url.c:412
 #, c-format
 msgid "Failed to open \"%s\"."
 msgstr "Konnte »%s« nicht öffnen."
@@ -500,8 +500,8 @@ msgstr "  -h, --help        Diesen Hilfetext anzeigen und beenden\n"
 
 #: ../exo-csource/main.c:289
 #, c-format
-msgid "  -v, --version     Print version information and exit\n"
-msgstr "  -v, --verison     Programmversion anzeigen\n"
+msgid "  -V, --version     Print version information and exit\n"
+msgstr "  -V, --version     Programmversion anzeigen\n"
 
 #: ../exo-csource/main.c:290
 #, c-format
@@ -1493,9 +1493,9 @@ msgstr ""
 
 #: ../exo-open/main.c:63
 msgid ""
-"  -v, --version                       Print version information and exit"
+"  -V, --version                       Print version information and exit"
 msgstr ""
-"  -v, --version                       Programmversion anzeigen und beenden"
+"  -V, --version                       Programmversion anzeigen und beenden"
 
 #: ../exo-open/main.c:65
 msgid ""
