--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-12 11:50-0500\n"
+"POT-Creation-Date: 2008-11-22 12:34+0100\n"
 "PO-Revision-Date: 2008-11-12 11:50-0400\n"
 "Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
@@ -433,12 +433,12 @@ msgstr "Personalizar barra de ferramentas..."
 msgid "Unable to open \"%s\""
 msgstr "Não foi possível abrir \"%s\""
 
-#: ../exo/exo-url.c:331
+#: ../exo/exo-url.c:326
 #, c-format
 msgid "The URL \"%s\" is not supported"
 msgstr "A URL \"%s\" não é suportada"
 
-#: ../exo/exo-url.c:417
+#: ../exo/exo-url.c:412
 #, c-format
 msgid "Failed to open \"%s\"."
 msgstr "Falhou ao abrir \"%s\"."
@@ -500,8 +500,8 @@ msgstr "  -h, --help        Mostra esta mensagem de ajuda e sai\n"
 
 #: ../exo-csource/main.c:289
 #, c-format
-msgid "  -v, --version     Print version information and exit\n"
-msgstr "  -v, --version     Mostra informação de versão e sai\n"
+msgid "  -V, --version     Print version information and exit\n"
+msgstr "  -V, --version     Mostra informação de versão e sai\n"
 
 #: ../exo-csource/main.c:290
 #, c-format
@@ -1068,7 +1068,8 @@ msgstr "Falhou ao executar o emulador de terminal padrão"
 msgid ""
 "Open the Preferred Applications\n"
 "configuration dialog"
-msgstr "Abrir o diálogo de configuração\n"
+msgstr ""
+"Abrir o diálogo de configuração\n"
 "Aplicativos preferidos"
 
 #: ../exo-helper/main.c:69
@@ -1076,8 +1077,8 @@ msgid ""
 "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
 "one of the following values."
 msgstr ""
-"Iniciar o assistente padrão de TIPO com o PARÂMETRO opcional, once TIPO é "
-"um dos seguintes valores."
+"Iniciar o assistente padrão de TIPO com o PARÂMETRO opcional, once TIPO é um "
+"dos seguintes valores."
 
 #: ../exo-helper/main.c:69
 msgid "TYPE [PARAMETER]"
@@ -1329,7 +1330,8 @@ msgstr "Você não possui privilégios para desmontar a camada criptografada"
 #: ../exo-mount/exo-mount-hal.c:937
 #, c-format
 msgid "An application is preventing the crypto layer from being torn down"
-msgstr "Um aplicativo esta impedindo que a camada criptografada seja desmontada"
+msgstr ""
+"Um aplicativo esta impedindo que a camada criptografada seja desmontada"
 
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:1021
@@ -1482,9 +1484,9 @@ msgstr ""
 
 #: ../exo-open/main.c:63
 msgid ""
-"  -v, --version                       Print version information and exit"
+"  -V, --version                       Print version information and exit"
 msgstr ""
-"  -v, --version                       Mostra informação de versão e sai"
+"  -V, --version                       Mostra informação de versão e sai"
 
 #: ../exo-open/main.c:65
 msgid ""
