--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-23  Michal Várady <miko.vaji@gmail.com>
+
+	* cs.po: Czech translation updated
+
 2008-11-18  Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Albanian translation update (Besnik Bleta)
