* exo-helper/main.c (main): Stop startup notification once the plug is 	  created and the dialog content has been moved into the plug.
(Old svn revision: 28888)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-23	Jannis Pohlmann <jannis@xfce.org>
+
+	* exo-helper/main.c (main): Stop startup notification once the plug is
+	  created and the dialog content has been moved into the plug.
+
 2008-11-22	Nick Schermer <nick@xfce.org>
 
 	* exo-desktop-item-edit/main.c, exo-open/main.c, exo-mount/main.c
