--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2008-11-23  Michal Várady <miko.vaji@gmail.com>
 
+	* ca.po: Catalan translation udpate (Carles Muñoz Gorriz)
 	* cs.po: Czech translation updated
 
 2008-11-18  Maximilian Schleiss <maximilian@xfce.org>
