--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-23	Jannis Pohlmann <jannis@xfce.org>
+
+	* de.po: Update German translations.
+	* libexo-0.3.pot, *.po: Update translation files.
+
 2008-11-23  Michal Várady <miko.vaji@gmail.com>
 
 	* ca.po: Catalan translation udpate (Carles Muñoz Gorriz)
@@ -14,7 +19,7 @@
 
 2008-11-15  Eren Türkay <erenturkay@xfce.org>
 
-        * tr.po: Turkish translation update (Gökmen Görgen)
+	* tr.po: Turkish translation update (Gökmen Görgen)
 
 2008-11-12 Og Maciel <ogmaciel@gnome.org>
 
@@ -22,7 +27,7 @@
 
 2008-11-11  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2008-11-02  Maximilian Schleiss <maximilian@xfce.org>
 
@@ -44,7 +49,7 @@
 2008-10-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* tr.po, LINGUAS: Turkish translation added (Gökmen Görgen)
- 
+
 2008-10-19  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: German translation update (Fabian Nowak)
@@ -76,7 +81,7 @@
 
 2008-07-15  Og Maciel <ogmaciel@gnome.org>
 
-    * pt_BR.po: Updated Brazilian Portuguese translation
+	* pt_BR.po: Updated Brazilian Portuguese translation
 
 2008-06-26  Maximilian Schleiss <maximilian@xfce.org>
 
@@ -92,7 +97,7 @@
 
 2008-05-04  Og Maciel <ogmaciel@gnome.org>
 
-    * pt_BR.po: Updated Brazilian Portuguese translation
+	* pt_BR.po: Updated Brazilian Portuguese translation
 
 2008-04-27	Mike Massonnet <mmassonnet@xfce.org>
 
@@ -101,7 +106,7 @@
 
 2008-04-12  Mike Massonnet <mmassonnet@xfce.org>
 
-    * lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
+	* lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
 
 2008-03-18	Mike Massonnet <mmassonnet@xfce.org>
 
@@ -133,7 +138,7 @@
 2007-12-02  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: German translation update
-	by Fabian Nowak <timstery@arcor.de>
+	  by Fabian Nowak <timstery@arcor.de>
 
 2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
 
@@ -159,7 +164,7 @@
 2007-11-03	Og Maciel <ogmaciel@gnome.org>
 
 	* pt_BR: Updated Brazilian Portuguese translation
-	by Og Maciel <ogmaciel@gnome.org>
+	  by Og Maciel <ogmaciel@gnome.org>
 
 2007-10-29  Stephan Arts <stephan@xfce.org>
 
@@ -303,7 +308,7 @@
 2007-01-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ro.po: Updated the Romanian translation by
-	Mişu Moldovan <dumol@gnome.ro>
+	  Mişu Moldovan <dumol@gnome.ro>
 
 2007-01-20  Benedikt Meurer <benny@xfce.org>
 
@@ -313,7 +318,7 @@
 2007-01-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ru.po: Updated the Russian translation by
-	Andrey Fedoseev <andrey.fedoseev@gmail.com>
+	  Andrey Fedoseev <andrey.fedoseev@gmail.com>
 
 2001-01-19  Stavros Giannouris <stavrosg@hellug.gr>
 
@@ -326,7 +331,7 @@
 2007-01-16  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Updated the Polish translation by
-	Szymon Kałasz <szymon_maestro@gazeta.pl>
+	  Szymon Kałasz <szymon_maestro@gazeta.pl>
 
 2007-01-16  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
@@ -339,7 +344,7 @@
 2007-01-14  Maximilian Schleiss <maximilian@xfce.org>
 
 	* it.po: Updated the Italian translation by
-	Dario <dariolinux@tiscali.it>
+	  Dario <dariolinux@tiscali.it>
 
 2007-01-14  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
@@ -352,17 +357,17 @@
 2007-01-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* cs.po: Updated the Czech translation by
-	Michal Várady <miko.vaji@gmail.com>
+	  Michal Várady <miko.vaji@gmail.com>
 
 2007-01-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Updated the Polish translation by
-	Piotr Maliński <admin@rk.edu.pl>
+	  Piotr Maliński <admin@rk.edu.pl>
 
 2007-01-11  Jean-François Wauthy <pollux@xfce.org>
 
 	* be.po, LINGUAS: Add Belarusian translations by Alexander Nyakhaychyk
-	<nyakhaychyk@gmail.com>
+	  <nyakhaychyk@gmail.com>
 
 2007-01-11  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
@@ -438,12 +443,12 @@
 2006-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* mk.po: Added the Macedonian translation by
-	Pavle Jonoski <jonoski.pavle@gmail.com>
+	  Pavle Jonoski <jonoski.pavle@gmail.com>
 
 2006-12-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ru.po: Updated the Russian translation by
-	Andrey Fedoseev <andrey.fedoseev@gmail.com>
+	  Andrey Fedoseev <andrey.fedoseev@gmail.com>
 
 2006-11-14  Maximilian Schleiss <maximilian@xfce.org>
 
@@ -470,7 +475,7 @@
 2006-10-28  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* dz.po: add Dzongkha translation by Dzongkha team
-	Tenzin <tdendup@dit.gov.bt>
+	  Tenzin <tdendup@dit.gov.bt>
 
 2006-10-22  Maximilian Schleiss <maximilian@xfce.org>
 
@@ -483,12 +488,12 @@
 2006-10-02  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ru.po: Updated Russian translations by Andrey Fedoseev
-	<andrey.fedoseev@gmail.com>
+	  <andrey.fedoseev@gmail.com>
 	
 2006-09-23  Jean-François Wauthy <pollux@xfce.org>
 
 	* pl.po: Updated Polish translations by piotr maliński
-	<riklaunim@gmail.com>
+	  <riklaunim@gmail.com>
 
 2006-09-18  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
@@ -560,7 +565,7 @@
 2006-08-19  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
-	<miko.vaji@gmail.com>
+	  <miko.vaji@gmail.com>
 	* fr.po: Updated French translations by Max Schleiss
 
 2006-08-17  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
@@ -580,7 +585,7 @@
 2006-08-15  Jean-François Wauthy <pollux@xfce.org>
 
 	* pl.po: Update Polish translations by piotr maliński
-	<riklaunim@gmail.com>
+	  <riklaunim@gmail.com>
 
 2006-08-15  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
@@ -609,12 +614,12 @@
 2006-07-16  Adriano Winter Bess  <adriano@xfce.org>
 
 	* pt_BR.po: Updated brazilian portuguese translations
-	by Tomás Acauan Schertel <tschertel@gmail.com>
+	  by Tomás Acauan Schertel <tschertel@gmail.com>
 	
 2006-07-15  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
-	<miko.vaji@gmail.com>
+	  <miko.vaji@gmail.com>
 
 2006-07-09  Benedikt Meurer <benny@xfce.org>
 
@@ -680,7 +685,7 @@
 2006-05-15  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: updated catalan translation by
-	Carles Muñoz Gorriz <carlesmu@internautas.org>
+	  Carles Muñoz Gorriz <carlesmu@internautas.org>
 
 2006-05-13  Daichi Kawahata <daichi@xfce.org>
 
