--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-11-23	Jannis Pohlmann <jannis@xfce.org>
 
+	* exo-helper/main.c: Oops, I actually broke the --launch parameter. Fixed.
+
+2008-11-23	Jannis Pohlmann <jannis@xfce.org>
+
 	* exo-helper/exo-preferred-applications.desktop.in: Remove GenericName and
 	  the "Xfce 4" prefix from the Name field.
 	* exo-helper/main.c: Change order of the command line parameters so 
