--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-24  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update
+
 2008-11-23	Jannis Pohlmann <jannis@xfce.org>
 
 	* de.po: Update German translations.
