--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-24  Maximilian Schleiss <maximilian@xfce.org>
+
+	* fr.po: French translation update
+	* uk.po: Ukrainian translation udpate (Dmitry Nikitin)
+
 2008-11-24  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
