--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-25  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+
 2008-11-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: French translation update
