--- a/po/es.po
+++ b/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2008-11-23 16:06+0100\n"
 "PO-Revision-Date: 2008-11-16 19:09+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
-"Language-Team: os-cillation <info@os-cillation.com>\n"
+"Language-Team: Spanish/ES <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1077,7 +1077,7 @@ msgstr "Socket del gestor de configuración"
 
 #: ../exo-helper/main.c:69
 msgid "SOCKET ID"
-msgstr "SOCKET ID"
+msgstr "ID de SOCKET"
 
 #: ../exo-helper/main.c:71
 msgid ""
