--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-30 Lars Nielsen <lars@mit-web.dk>
+
+	* da.po,LINGUAS: Added danish translation (Per Kongstad)
+
 2008-11-30  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
