Translations updates - ca - xfce4-session po update
(Old svn revision: 28970)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,11 +1,12 @@
+2008-11-30  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ca.po: Catalan translation udpate (Carles Muñoz Gorriz)
+	* es.po: Spanish translation update (Abel Martín)
+	* ja.po: Japanese translation update (Masato Hashimoto)
+
 2008-11-30 Lars Nielsen <lars@mit-web.dk>
 
 	* da.po,LINGUAS: Added danish translation (Per Kongstad)
-
-2008-11-30  Maximilian Schleiss <maximilian@xfce.org>
-
-	* es.po: Spanish translation update (Abel Martín)
-	* ja.po: Japanese translation update (Masato Hashimoto)
 
 2008-11-28  Maximilian Schleiss <maximilian@xfce.org>
 
